Added link to NY legislaters

--- a/helpout.html
+++ b/helpout.html
@@ -47,15 +47,17 @@
         <a href="images/SOTZ-flyer.pdf" download="SOTZ-flyer.pdf">
           <h2>Printable Flyer</h2>
         </a>
+        (FREE)
         <p>Want to help?  Download this, print it out in bulk, and pass them out in your city.  You can legally do so on public sidewalks, and in public areas.  You can also email them to others, asking them to print it out and distribute as well.  This flyer explains what happened to the bridge, and what citizens can do to help the cause.</p>
-        <a href="images/SOTZ-flyer.pdf" download="SOTZ-flyer.pdf">SOTZ Flyer</a>
+        <a href="images/SOTZ-flyer.pdf" download="SOTZ-flyer.pdf">Download the SOTZ Flyer</a>
       </div>
       <div class="col-xs-12 col-md-6">
         <a href="images/SOTZ-letter.pdf" download="SOTZ-letter.pdf">
           <h2>Printable Letter To Your Representative</h2>
         </a>
-        <p>Want to help?  Download this, print it out, fill it out, sign it, and then send it to as many NY legislators as you can.  You can also email it to others, asking them to print it out, sign it, and send it in as well.  This letter explains what happened to the bridge, and why it's so important that the current bill in the senate passes.</p>
-        <a href="images/SOTZ-letter.pdf" download="SOTZ-letter.pdf">SOTZ Letter</a>     
+        (FREE)
+        <p>Want to help?  Download this, print it out, fill it out, sign it, and then send it to as many <a href="http://nyassembly.gov/mem/" target="_blank">NY legislators</a> as you can.  You can also email it to others, asking them to print it out, sign it, and send it in as well.  This letter explains what happened to the bridge, and why it's so important that the current bill in the senate passes.  Here are all of their <a href="http://nyassembly.gov/mem/" target="_blank">names, addresses, phones, and emails.</a></p>
+        <a href="images/SOTZ-letter.pdf" download="SOTZ-letter.pdf">Download the SOTZ Letter</a>     
       </div>
     </div> 
     <div class="row">
@@ -63,15 +65,16 @@
         <a href="http://events.eventzilla.net/e/save-our-tappan-zee--live-protest-event-2138933813?resp=on&dateid=2138805633">
           <h2>Come protest with us!</h2>
         </a>
+        (FREE)
         <p>Want to help?  Sign up for an upcoming protest event to help us hold up signs and our 35 foot full color banner!</p>
         <a href="http://events.eventzilla.net/e/save-our-tappan-zee--live-protest-event-2138933813?resp=on&dateid=2138805633">Sign Up To Protest!</a>
       </div>
       <div class="col-xs-12 col-md-6">
         <a href="/store.html">
-          <h2>SOTZ Cards To Hand Out</h2>
+          <h2>SOTZ Action Cards To Hand Out</h2>
         </a>
-        <p>Want to help?  Purchase our full-color double-sided business card size 'action cards' to really make an impact with those you meet at parties, the office, and the supermarket!  Conveniently fits in your wallet and car cup holders.</p>
-        <a href="/store.html">Purchase Business-Size Cards!</a>     
+        <p>Want to help?  Purchase our full-color double-sided business card size 'action cards' to really make an impact with those you meet at parties, the office, and the supermarket!  It tells everyone you hand them out to EXACTLY what they need to do to contribute in some way to our cause.  They conveniently fit in your wallet as well as you car cup holders.  Suggestion: Hand them out in packs of 10 and ask others to distribute to THEIR people!</p>
+        <a href="/store.html">Purchase Business-Size Action Cards!</a>     
       </div>
     </div>
     <div class="row">
