--- a/index.html
+++ b/index.html
@@ -54,19 +54,8 @@
         </h4>
       </div>
 
-      <div class="col-xs-12 col-md-4">
-        <h4 class="text-center">GOFUNDME.COM:   
-          <p style="color: red">$10,200 of $100,000 since 12/2/17<br>
-            <span style="color: black">from 341 Friends of the Tappan Zee</span>
-          </p> 
-        </h4>
-      </div>
-      <div class="col-xs-12 col-md-4">
-        <h4 class="text-center">CHANGE.ORG:  
-          <p style="color: red">$440 of $50,000 since 1/1/18<br>
-            <span style="color: black">from 20 Friends of the Tappan Zee</span>
-          </p>
-        </h4>
+      <div class="col-xs-12 col-md-8"> 
+        <p align="justify">4/22/18 - Thanks to our efforts, there is currently a bill pending in the New York State Senate to add the Tappan Zee name back to the bridge.  It would be a compromise: The Governor Mario M. Cuomo Tappan Zee Bridge.  Why support this?  It has a decent chance of passing; it adds the Tappan Zee name back; and it avoids renaming the signs.  If you support this bill, there are many ways <a href="helpout.html">you can help.</a></p>
       </div>
       <br>
       
@@ -84,7 +73,7 @@
     <div class="row">
       <div class="col-md-6 col-xs-12 text-center">
         <img class="text-center img-responsive" src="images/sotz-logo-website.png" alt="Photo of SOTZ logo">
-        <p align="justify">4/22/18 - Thanks to our efforts, there is currently a bill pending in the New York State Senate to add the Tappan Zee name back to the bridge.  It would be a compromise: The Governor Mario M. Cuomo Tappan Zee Bridge.  Why support this?  It has a decent chance of passing; it adds the Tappan Zee name back; and it avoids renaming the signs.  If you support this bill, please download</p>
+       
       </div>
       <div class="col-md-6 col-xs-12">
         <h3 class="text-center">While You're Here:</h3>
