--- a/helpout.html
+++ b/helpout.html
@@ -66,7 +66,7 @@
           <h2>Come protest with us!</h2>
         </a>
         (FREE)
-        <p>Want to help?  Sign up for an upcoming protest event to help us hold up signs and our 35 foot full color banner!</p>
+        <p>Want to help?  Sign up for an upcoming protest event to help us hold up signs and our 35 foot full color banner!  And if you'd like to organize a protest in YOUR town or area, let us know and we'll do all we can to support you with signs, banners, etc.</p>
         <a href="http://events.eventzilla.net/e/save-our-tappan-zee--live-protest-event-2138933813?resp=on&dateid=2138805633">Sign Up To Protest!</a>
       </div>
       <div class="col-xs-12 col-md-6">
