Added counter and updated flyer

--- a/helpout.html
+++ b/helpout.html
@@ -57,7 +57,7 @@
         </a>
         (FREE)
         <p>Want to help?  Download this, print it out, fill it out, sign it, and then send it to as many <a href="http://nyassembly.gov/mem/" target="_blank">NY legislators</a> as you can.  You can also email it to others, asking them to print it out, sign it, and send it in as well.  This letter explains what happened to the bridge, and why it's so important that the current bill in the senate passes.  Here are all of their <a href="http://nyassembly.gov/mem/" target="_blank">names, addresses, phones, and emails.</a></p>
-        <a href="images/SOTZ-letter.pdf" download="SOTZ-letter.pdf">Download the SOTZ Letter</a>     
+        <a href="images/SOTZ-letter2.pdf" download="SOTZ-letter2.pdf">Download the SOTZ Letter</a>     
       </div>
     </div> 
     <div class="row">
