--- a/helpout.html
+++ b/helpout.html
@@ -42,6 +42,7 @@
 
       <h2>Join the Fight!</h2>
   <div class="well">     
+    <h4>We need everyone and anyone to write to as many state senators and representatives as possible, starting with your local ones!  First, do it yourself using the tools below (and there is a link to find your representatives).  Second, help get more people to our website so they too can help by downloading flyers, buying action cards, and more!</h4>
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <a href="images/SOTZ-flyer.pdf" download="SOTZ-flyer.pdf">
@@ -56,7 +57,7 @@
           <h2>Printable Letter To Your Representative</h2>
         </a>
         (FREE)
-        <p>Want to help?  Download this, print it out, fill it out, sign it, and then send it to as many <a href="http://nyassembly.gov/mem/" target="_blank">NY legislators</a> as you can.  You can also email it to others, asking them to print it out, sign it, and send it in as well.  This letter explains what happened to the bridge, and why it's so important that the current bill in the senate passes.  Here are all of their <a href="http://nyassembly.gov/mem/" target="_blank">names, addresses, phones, and emails.</a></p>
+        <p>Want to help?  Download this, print it out, fill it out, sign it, and then send it to as many <a href="http://nyassembly.gov/mem/" target="_blank">NY legislators</a> as you can.  You can also email it to others, asking them to print it out, sign it, and send it in as well.  This letter explains what happened to the bridge, and why it's so important that the current bill in the senate passes.  Here are all of their <a href="http://nyassembly.gov/mem/" target="_blank">names, addresses, phones, and emails.</a> If you want to copy the text of the letter to paste into an email, scroll down!</p>
         <a href="images/SOTZ-letter2.pdf" download="SOTZ-letter2.pdf">Download the SOTZ Letter</a>     
       </div>
     </div> 
@@ -92,7 +93,39 @@
         <p>Want to help?  Purchase any of our merchandise separately!  Just want a sign?  You got it.  Just want pens?  You got it.  Just want magnets?  You got it.</p>
          <a href="/store.html">Buy Promotional Merchandise!</a>    
       </div>
-    </div>  
+    </div> 
+
+    <h2>Want to send off emails to your elected reps?  Copy and paste this letter:</h2>
+    <p>From the desk of (full name, address, zip code, email, and phone number)</p>
+
+    <p>Dear _________________,</p>
+  
+    <p>I am writing to you in support of NY State Senate Bill S7671 & NY State Assembly Bill A8914, both of which would rename the current Governor Mario M. Cuomo Bridge to the far more appropriate Governor Mario M. Cuomo Tappan Zee Bridge, and save us countless tax dollars by avoiding the replacement of all the signs.</p>
+
+    <p>I am one of the over 108,000 people who signed the petition on Change.org and I believe that the Tappan Zee name needs to remain a part of the new bridge, and if you don’t support this beautiful compromise, then YOU are the one being partisan.  Here are some more reasons why you should support it:</p>
+
+    <p>1.  History matters.  The bridge was originally named for the founders of New York: the Tappan Indians of the Lenape Nation and the Dutch settlers (Zee means ‘sea’ in Dutch).  Did you know that the official seal of New York City depicts a Dutch trader and a Lenape Indian? The history of that bridge name is so important.</p>
+
+    <p>2.  Public infrastructure should never be named after politicians, or not until at least that individual has been deceased for 50 years.  For a sitting governor to use his position of power to ram through a bill that names a bridge (that we payed for, and will pay for) after his politician father is a gross abuse of power and the definition of corruption.  We want the traditional name returned to the bridge’s name.</p>
+
+    <p>3.  Just because it’s a replacement bridge does not mean it deserves a new name.  London Bridge was destroyed and rebuilt four times and never did politicians decide to give it a new name simply because they ‘could’.  What happened during the signing of ‘The Big Ugly’ is inexcusable.  If you signed that bill, you should be ashamed of yourself.  If you didn’t, why haven’t you been fighting like we have to get the name back?</p>
+
+    <p>4.  Additional Reasons: (optional):</p>
+
+    <p>Senate Bill S761 and Assembly Bill A8914 are an opportunity for you to right an obvious wrong.  This bill represents an opportunity to honor Mario Cuomo without destroying 70 years of local history and over 350 years of NY history.  It’s a fair compromise that I am asking you to please get behind: either by publicly supporting and/or simply voting for it.</p>
+
+    <p>I kindly expect a response to this letter informing me of what action(s) you intend to take to help us save our Tappan Zee Bridge.</p>
+
+    <p>Sincerely,</p>
+
+    <p>_____________________ ______</p>
+    <p>Signature &amp; Date</p>
+
+    <h2>Looking for where to send these letters?</h2>
+    <p>Here are all of NY's elected representatives <a href="http://nyassembly.gov/mem/" target="_blank">names, addresses, phones, and emails.</a></p>
+    <p>1. CALL THEM.  2. EMAIL THEM.  3. WRITE TO THEM!</p>
+    <p>Do NOT delay.  We do NOT have much time left!</p>
+ 
   </div>
 
   </div>
