Updated website with protest info

--- a/helpout.html
+++ b/helpout.html
@@ -42,7 +42,10 @@
 
       <h2>Join the Fight!</h2>
   <div class="well">     
-    <h4>We need everyone and anyone to write to as many state senators and representatives as possible, starting with your local ones!  First, do it yourself using the tools below (and there is a link to find your representatives).  Second, help get more people to our website so they too can help by downloading flyers, buying action cards, and more!</h4>
+
+    <h4>6/1/18 - Please <a href="http://events.eventzilla.net/e/help-us-deliver-the-petition-to-governor-cuomo-2138958392" target="_blank">sign up</a> to help us deliver the 5,000 pages of petition signatures to Governor Cuomo on Thursday, June 7th, at 12 noon.</h4>  
+
+    <h4>We need everyone and anyone to write to as many state senators and representatives as possible, starting with your local ones!  First, use the tools below to find your representatives).  Second, help get more people to our website so they too can help by downloading flyers, buying action cards, and more!</h4>
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <a href="images/SOTZ-flyer.pdf" download="SOTZ-flyer.pdf">
