--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
       
       <div class="col-xs-12 col-md-6"> 
-        <p align="justify" style="font-size: 16px"><b>URGENT</b>: 4/29/18 - Thanks to our efforts, there is currently a senate bill AND an assembly bill pending in the New York State Senate to add the Tappan Zee name back to the bridge.  It would be a compromise: The Governor Mario M. Cuomo Tappan Zee Bridge.  YOU MUST SHOW YOUR SUPPORT!  It has a decent chance of passing; it adds the Tappan Zee name back; and it avoids renaming the signs.  <b>OUR ELECTED REPS HAVE UNTIL JUNE 20th TO MAKE IT HAPPEN THROUGH A VOTE!</b> <a href="helpout.html">Please help us get it passed!</a></p>
+        <p align="justify" style="font-size: 16px"><b>URGENT</b>: 6/1/18 - Please <a href="http://events.eventzilla.net/e/help-us-deliver-the-petition-to-governor-cuomo-2138958392" target="_blank">sign up</a> to help us deliver the 5,000 pages of petition signatures to Governor Cuomo on Thursday, June 7th, at 12 noon.  4/29/18 - Thanks to our efforts, there is currently a senate bill AND an assembly bill pending in the New York State Senate to add the Tappan Zee name back to the bridge.  It would be a compromise: The Governor Mario M. Cuomo Tappan Zee Bridge.  YOU MUST SHOW YOUR SUPPORT!  It has a decent chance of passing; it adds the Tappan Zee name back; and it avoids renaming the signs.  <b>OUR ELECTED REPS HAVE UNTIL JUNE 20th TO MAKE IT HAPPEN THROUGH A VOTE!</b> <a href="helpout.html">Please help us get it passed!</a></p>
       </div>
       <br>
       
