Updated protest links

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
       
       <div class="col-xs-12 col-md-6"> 
-        <p align="justify" style="font-size: 16px"><b>URGENT</b>: 6/1/18 - Please <a href="http://events.eventzilla.net/e/help-us-deliver-the-petition-to-governor-cuomo-2138958392" target="_blank">sign up</a> to help us deliver the 5,000 pages of petition signatures to Governor Cuomo on Thursday, June 7th, at 12 noon.  4/29/18 - Thanks to our efforts, there is currently a senate bill AND an assembly bill pending in the New York State Senate to add the Tappan Zee name back to the bridge.  It would be a compromise: The Governor Mario M. Cuomo Tappan Zee Bridge.  YOU MUST SHOW YOUR SUPPORT!  It has a decent chance of passing; it adds the Tappan Zee name back; and it avoids renaming the signs.  <b>OUR ELECTED REPS HAVE UNTIL JUNE 20th TO MAKE IT HAPPEN THROUGH A VOTE!</b> <a href="helpout.html">Please help us get it passed!</a></p>
+        <p align="justify" style="font-size: 16px"><b>HELP US DELIVER THE PETITION TO ANDREW CUOMO</b>: 6/1/18 - Please <a href="http://events.eventzilla.net/e/help-us-deliver-the-petition-to-governor-cuomo-2138958392" target="_blank">sign up</a> to help us deliver the 5,000 pages of petition signatures to Governor Cuomo on Thursday, June 7th, at 12 noon.  4/29/18 - Thanks to our efforts, there is currently a senate bill AND an assembly bill pending in the New York State Senate to add the Tappan Zee name back to the bridge.  It would be a compromise: The Governor Mario M. Cuomo Tappan Zee Bridge.  YOU MUST SHOW YOUR SUPPORT!  It has a decent chance of passing; it adds the Tappan Zee name back; and it avoids renaming the signs.  <b>OUR ELECTED REPS HAVE UNTIL JUNE 20th TO MAKE IT HAPPEN THROUGH A VOTE!</b> <a href="helpout.html">Please help us get it passed!</a></p>
       </div>
       <br>
       
@@ -110,7 +110,7 @@
         <p class="text-center main-links">1. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch" target="_blank">Sign the petition!</a></p>
         <p class="text-center main-links">2. <a href="helpout.html">Download &amp; Fight!</a>
         <p class="text-center main-links">3. <a href="store.html">Buy &amp; Distribute Cards!</a>
-        <p class="text-center main-links">4. <a href="http://events.eventzilla.net/e/save-our-tappan-zee--live-protest-event-2138933813?resp=on&dateid=2138805633">Join a Protest!</a>        
+        <p class="text-center main-links">4. <a href="http://events.eventzilla.net/e/help-us-deliver-the-petition-to-governor-cuomo-2138958392" target="_blank">Join a Protest!</a>        
         <p class="text-center main-links">5. <a href="donate.html">Donate!</a>
         <p class="text-center main-links">6. <a href="http://eepurl.com/diOTQ5" target="_blank">Join our email list. Stay informed.</a></p>
         <p class="text-center main-links">7. <a href="https://twitter.com/SaveOurTappanZ" target="_blank">Follow us on Twitter!</a></p>
