Shut down store

--- a/store.html
+++ b/store.html
@@ -43,6 +43,12 @@
   <div class="well"> 
     <div class="row">
       <div class="col-xs-12">
+
+        <h2>WARNING!  WE HAVE RUN OUT OF ALL MERCHANDISE!  DO NOT PURCHASE!  ANY PURCHASE WILL BE DEEMED A DONATION</h2>
+        <h2>WARNING!  WE HAVE RUN OUT OF ALL MERCHANDISE!  DO NOT PURCHASE!  ANY PURCHASE WILL BE DEEMED A DONATION</h2>
+        <h2>WARNING!  WE HAVE RUN OUT OF ALL MERCHANDISE!  DO NOT PURCHASE!  ANY PURCHASE WILL BE DEEMED A DONATION</h2>
+        <h2>WARNING!  WE HAVE RUN OUT OF ALL MERCHANDISE!  DO NOT PURCHASE!  ANY PURCHASE WILL BE DEEMED A DONATION</h2>
+        <h2>WARNING!  WE HAVE RUN OUT OF ALL MERCHANDISE!  DO NOT PURCHASE!  ANY PURCHASE WILL BE DEEMED A DONATION</h2>
         
         <h2>Support the cause by purchasing "Save Our Tappan Zee" merchandise here.</h2>
         
