Adjusted store shutdown

--- a/store.html
+++ b/store.html
@@ -44,13 +44,14 @@
     <div class="row">
       <div class="col-xs-12">
 
-        <h2>WARNING!  WE HAVE RUN OUT OF ALL MERCHANDISE!  DO NOT PURCHASE!  ANY PURCHASE WILL BE DEEMED A DONATION</h2>
-        <h2>WARNING!  WE HAVE RUN OUT OF ALL MERCHANDISE!  DO NOT PURCHASE!  ANY PURCHASE WILL BE DEEMED A DONATION</h2>
-        <h2>WARNING!  WE HAVE RUN OUT OF ALL MERCHANDISE!  DO NOT PURCHASE!  ANY PURCHASE WILL BE DEEMED A DONATION</h2>
-        <h2>WARNING!  WE HAVE RUN OUT OF ALL MERCHANDISE!  DO NOT PURCHASE!  ANY PURCHASE WILL BE DEEMED A DONATION</h2>
-        <h2>WARNING!  WE HAVE RUN OUT OF ALL MERCHANDISE!  DO NOT PURCHASE!  ANY PURCHASE WILL BE DEEMED A DONATION</h2>
+        <h2>WARNING!  WE HAVE RUN OUT OF ALL MERCHANDISE!  DO NOT PURCHASE!  ANY PURCHASE WILL BE DEEMED A DONATION AND YOU WILL NOT BE SENT ANY MERCHANDISE (BECAUSE WE DO NOT HAVE ANY AT THE MOMENT)</h2>
+        <h2>WARNING!  WE HAVE RUN OUT OF ALL MERCHANDISE!  DO NOT PURCHASE!  ANY PURCHASE WILL BE DEEMED A DONATION AND YOU WILL NOT BE SENT ANY MERCHANDISE (BECAUSE WE DO NOT HAVE ANY AT THE MOMENT)</h2>
+        <h2>WARNING!  WE HAVE RUN OUT OF ALL MERCHANDISE!  DO NOT PURCHASE!  ANY PURCHASE WILL BE DEEMED A DONATION AND YOU WILL NOT BE SENT ANY MERCHANDISE (BECAUSE WE DO NOT HAVE ANY AT THE MOMENT)</h2>
+        <h2>WARNING!  WE HAVE RUN OUT OF ALL MERCHANDISE!  DO NOT PURCHASE!  ANY PURCHASE WILL BE DEEMED A DONATION AND YOU WILL NOT BE SENT ANY MERCHANDISE (BECAUSE WE DO NOT HAVE ANY AT THE MOMENT)</h2>
+
+
         
-        <h2>Support the cause by purchasing "Save Our Tappan Zee" merchandise here.</h2>
+       <!--  <h2>Support the cause by purchasing "Save Our Tappan Zee" merchandise here.</h2> -->
         
         <br><br>
         <h2 class="big-text">Buy A SOTZ Box! SOTZ = Save. Our. Tappan. Zee!</h2>
