Made a bunch of changes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
       </div>
       
       <div class="col-xs-12 col-md-6"> 
-        <p align="justify" style="font-size: 16px"><b>HELP US DELIVER THE PETITION TO ANDREW CUOMO</b>: 6/1/18 - Please <a href="http://events.eventzilla.net/e/help-us-deliver-the-petition-to-governor-cuomo-2138958392" target="_blank">sign up</a> to help us deliver the 5,000 pages of petition signatures to Governor Cuomo on Thursday, June 7th, at 12 noon.  4/29/18 - Thanks to our efforts, there is currently a senate bill AND an assembly bill pending in the New York State Senate to add the Tappan Zee name back to the bridge.  It would be a compromise: The Governor Mario M. Cuomo Tappan Zee Bridge.  YOU MUST SHOW YOUR SUPPORT!  It has a decent chance of passing; it adds the Tappan Zee name back; and it avoids renaming the signs.  <b>OUR ELECTED REPS HAVE UNTIL JUNE 20th TO MAKE IT HAPPEN THROUGH A VOTE!</b> <a href="helpout.html">Please help us get it passed!</a></p>
+        <p align="justify" style="font-size: 16px"><b>HELP US ENCOURAGE ANDREW CUOMO TO CHANGE HIS MIND</b>: 8/25/18 - Please continue to call CBS news about the upcoming debate between Cynthia Nixon and the Governor.</p>
+        <p align="justify" style="font-size: 16px"><b>CYNTHIA NIXON AND MARK MOLINARI</b>: 9/1/18 - They are both running for governor, and both think what happened to the bridge name was wrong.  Call them, and let them know you support their decision to fight for the Tappan Zee name!  And continue to tell your friends to sign our petition!</p>
       </div>
       <br>
       
@@ -100,7 +101,7 @@
       <div class="col-md-6 col-xs-12 text-center">
         <img class="text-center img-responsive" src="images/sotz-logo-website.png" alt="Photo of SOTZ logo">
         <h4 class="text-center">SIGNATURE COUNT:
-          <p style="color: red">108,000 Supporters since 11/3/17<br>
+          <p style="color: red">111,000 Supporters since 11/3/17<br>
             <span style="color: black">who want their bridge back</span>
           </p>
         </h4>
@@ -119,8 +120,8 @@
     </div>
     <br>
     <div>
-     <p>What started as a single signature by a guy watching tv has turned into a petition with over 106,000 signatures, and the creation of this apolitical not-for-profit advocacy organization with one primary mission: to return the Tappan Zee name to our bridge crossing the Hudson between Westchester &amp; Rockland counties, NY. <a href="about.html">Learn more about us.</a></p>
-     <p>Save Our Tappan Zee, Inc. is a NY not-for-profit corporation, 501(c)(3) PENDING (tax-exempt paperwork submitted to the IRS on 1/8/2018.)</p>
+     <p>What started as a single signature by a citizen watching tv has turned into a petition with over 111,000 signatures, news coverage around the country, and the creation of this apolitical not-for-profit advocacy organization with one primary mission: to return the Tappan Zee name to our bridge crossing the Hudson between Westchester &amp; Rockland counties, NY. <a href="about.html">Learn more about us.</a></p>
+     <p>Save Our Tappan Zee, Inc. is a NY 501(c)(3) not-for-profit corporation.</p>
     </div>
   </div>
 
@@ -149,7 +150,7 @@
 
 <script>
  
-var deadline = new Date("jun 20, 2018 15:37:25").getTime();
+var deadline = new Date("nov 6, 2018 08:00:00").getTime();
  
 var x = setInterval(function() {
  
