--- a/media.html
+++ b/media.html
@@ -47,6 +47,10 @@
         <h4>Latest News</h4>
         <ul>
           <li><i>If you'd like to interview someone from the company, please send an email to saveourtappanzee@gmail.com or call Executive Director Monroe Mann at 808-482-4136</i></li><br>
+
+          <li><strong>6/1/18 </strong> We delivered the 5,000 pages of petition signatures to Governor Cuomo on Thursday, June 7th, at 12 noon.</li>  
+
+          <li><strong>4/29/18 </strong> Thanks to our efforts, there is currently a senate bill AND an assembly bill pending in the New York State Senate to add the Tappan Zee name back to the bridge.  It would be a compromise: The Governor Mario M. Cuomo Tappan Zee Bridge.  YOU MUST SHOW YOUR SUPPORT!  It has a decent chance of passing; it adds the Tappan Zee name back; and it avoids renaming the signs.  <b>OUR ELECTED REPS HAVE UNTIL JUNE 20th TO MAKE IT HAPPEN THROUGH A VOTE!</b> <a href="helpout.html">Please help us get it passed!</a></p></li>
         
           <li><strong>4/24/18 - </strong>Our first two protests overlooking 287 were grand successes, with thousands of cars honking in support of our 35 foot x 5 foot sign!  More protest events coming soon.</li><br>
       </div>
