--- a/tax_document.html
+++ b/tax_document.html
@@ -43,10 +43,22 @@
     <div class="row">
       <div class="col-md-6 col-xs-12">
         <h2>Legal</h2>
-        <p>Our formal corporate documentation and IRS tax information will be here shortly.</p>
+        <h3>IRS Tax Exemption</h3>
+        <p>See attached our IRS tax exemption.</p>
+          <a href="images/sotz-tax-exmpetion.pdf" download="sotz-tax-exmpetion.pdf">IRS Tax Exemption Letter</a>
+
+        <h3>IRS Tax Exemption Application</h3>
+        <p>See attached our IRS tax exemption application.</p>
+          <a href="images/founding-documents.pdf" download="founding-documents.pdf">IRS Tax Exemption Application</a>
+
+        <h3>NY Tax Exemption Application</h3>
+        <p>See attached our NY tax exemption application.</p>
+          <a href="#" download="#">Coming Soon</a>        
       </div>
       <div class="col-md-6 col-xs-12">
-        
+        <h2>Tax Filings 2017</h2>
+          <p>See attached our IRS Form 990-N.</p>
+            <a href="images/sotz-2017-postcard.pdf" download="sotz-2017-postcard.pdf">IRS Form 990-N 2017</a>
       </div>
     </div> 
 
