--- a/about.html
+++ b/about.html
@@ -76,7 +76,9 @@
     </div>
     <div class="col-md-6 col-xs-12">
       <h2>How is the Money Spent?</h2>
-      <p>That's a very good question.  Without further ado, here is <a href="contribute.html">the breakdown</a>.</p>
+      <p>That's a very good question.  Without further ado, here is <a href="donate.html">the breakdown</a>.</p>
+
+      <p>NOTE: Effective 7/1/2018, all members of the staff (including the executive director) are volunteers.</p>
     </div>
   </div>
 
@@ -90,14 +92,8 @@
   </div>
   <div class="col-md-6 col-xs-12">
     <h2>Founding Documents</h2>
-      Submitted IRS Form 1034 - COMING SOON
-      <ul>
-        <li>DESCRIPTION: This is our complete application for tax exemption from the IRS.
-          <li>Form 1034</li>
-          <li>New York Corporation Founding Documents</li>
-          <li>Founding ByLaws</li>
-          <li>Additional Supplemental Information</li>
-      </ul>
+      <a href="/tax-document.html">Click here to see all of our legal documents.</a>
+
   </div>
 </div> 
 
