--- a/team.html
+++ b/team.html
@@ -94,6 +94,18 @@
           </div>
         </div>
 
+        <h4><strong>Marlene Pedersen - Board Member</strong></h4>
+        <div class="row">
+          <h4></h4>
+          <div class="col-xs-12 col-md-3">
+            <img src="images/default.jpg" class="img-responsive" alt="photo of Marelene Pedersen" style="max-height: 200px; max-width: 200px; text-align: center">
+          </div>
+
+          <div class="col-xs-12 col-md-9">
+            <p>Bio & Photo coming soon.</p>
+          </div>
+        </div>
+
          <h4><strong>Dr. Monroe Mann, PhD, Esq, MBA, ME, LLM - Executive Director</strong></h4>
         <div class="row">
           <h4></h4>
