Made a bunch of changes

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
       <h2>How is the Money Spent?</h2>
       <p>That's a very good question.  Without further ado, here is <a href="donate.html">the breakdown</a>.</p>
 
-      <p>NOTE: Effective 7/1/2018, all members of the staff (including the executive director) are volunteers.</p>
+      <p>NOTE: Effective 7/1/2018, all members of the staff (including the executive director) are volunteers, though the board can choose to compensate independent contractors, whomever they may be.</p>
     </div>
   </div>
 
@@ -92,7 +92,7 @@
   </div>
   <div class="col-md-6 col-xs-12">
     <h2>Founding Documents</h2>
-      <a href="/tax-document.html">Click here to see all of our legal documents.</a>
+      <a href="/tax_document.html">Click here to see all of our legal documents.</a>
 
   </div>
 </div> 
