Updated team roster; removed Cherish

--- a/team.html
+++ b/team.html
@@ -55,7 +55,19 @@
           </div>
         </div>
 
-        <h4><strong>Cherish Pratt, M.A. - Vice President</strong></h4>
+        <h4><strong>Marlene Pedersen - Vice President</strong></h4>
+        <div class="row">
+          <h4></h4>
+          <div class="col-xs-12 col-md-3">
+            <img src="images/default.jpg" class="img-responsive" alt="photo of Marelene Pedersen" style="max-height: 200px; max-width: 200px; text-align: center">
+          </div>
+
+          <div class="col-xs-12 col-md-9">
+            <p>Full bio & Photo coming soon.</p>
+          </div>
+        </div>
+
+       <!--  <h4><strong>Cherish Pratt, M.A. - Vice President</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
@@ -66,7 +78,7 @@
             <p>
               Cherish was raised in Rockland County, NY, where her formerly German, French and Scottish immigrant ancestors settled several generations ago.  Her great-grandfather, former Superintendant of Schools, drove across the Hudson River in his early model Ford when the river froze and there was no Tappan Zee built.  Dr. Hopf made it safely across and since then, the Hudson River and the Tappan Zee Bridge that spans it, existed as part of the family lore.  Educated in Germany, Japan and Honolulu, Cherish returned to Rockland from Hawaii to raise a family.  She is grateful for her worldly education and feels fortunate to speak three languages and to have lived, studied and worked on several continents.  Cherish has lived in several cities in Japan, having studied then worked as an English language teacher for Princeton University. She became a scholar of Japanese religion at the University of Hawaii, Manoa, and was granted an audience with the Emperor Akihito and Empress Michiko of Japan, to present her work on Japanese weddings.  Back in the United States, her expertise in educational administration and marketing is notable, having worked for some of the top advisory and research organizations, private schools and law schools in the region.  She is a published writer, speechwriter and is currently working on a screenplay and a book.  Cherish is the proud mother of two children who attend Rockland county schools.</p>
           </div>
-        </div>
+        </div> -->
 
         <h4><strong>Christopher McCormick, B.F.A. - Secretary</strong></h4>
         <div class="row">
@@ -94,19 +106,7 @@
           </div>
         </div>
 
-        <h4><strong>Marlene Pedersen - Board Member</strong></h4>
-        <div class="row">
-          <h4></h4>
-          <div class="col-xs-12 col-md-3">
-            <img src="images/default.jpg" class="img-responsive" alt="photo of Marelene Pedersen" style="max-height: 200px; max-width: 200px; text-align: center">
-          </div>
-
-          <div class="col-xs-12 col-md-9">
-            <p>Bio & Photo coming soon.</p>
-          </div>
-        </div>
-
-         <h4><strong>Dr. Monroe Mann, PhD, Esq, MBA, ME, LLM - Executive Director</strong></h4>
+        <h4><strong>Dr. Monroe Mann, PhD, Esq, MBA, ME, LLM - Executive Director & Board Member</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
