--- a/index.html
+++ b/index.html
@@ -78,18 +78,13 @@
       <div class="col-xs-12 col-md-6"> 
       <!--   <p align="justify" style="font-size: 16px"><b>HELP US ENCOURAGE ANDREW CUOMO TO CHANGE HIS MIND</b>: 8/25/18 - Please continue to call CBS news about the upcoming debate between Cynthia Nixon and the Governor.</p>
         <p align="justify" style="font-size: 16px"><b>CYNTHIA NIXON AND MARK MOLINARI</b>: 9/1/18 - They are both running for governor, and both think what happened to the bridge name was wrong.  Call them, and let them know you support their decision to fight for the Tappan Zee name!  And continue to tell your friends to sign our petition!</p> -->
-        <iframe width="90%" height="300" src="https://www.youtube.com/embed/HTjnQVYd-i4?ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe width="90%" height="300" src="https://youtu.be/tM_ABFREMHg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       </div>
       <br>
       
     </div>
 
     <br><br>
-
-   
-
-
-
 
     <div class="row">
       <div class="col-md-6 col-xs-12 text-center">
@@ -102,13 +97,13 @@
       <div class="col-md-6 col-xs-12 text-center">
         <img class="text-center img-responsive" src="images/sotz-logo-website.png" alt="Photo of SOTZ logo">
         <h4 class="text-center">SIGNATURE COUNT:
-          <p style="color: red">111,000 Supporters since 11/3/17<br>
+          <p style="color: red">113,000 Supporters since 11/3/17<br>
             <span style="color: black">who want their bridge back</span>
           </p>
         </h4>
       </div>
       <div class="col-md-6 col-xs-12">
-        <h3 class="text-center">HELP US GET S7671 AND A8914 PASSED:</h3>
+        <h3 class="text-center">Please Sign Our Petition:</h3>
         <p class="text-center main-links">1. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch" target="_blank">Sign the petition!</a></p>
         <p class="text-center main-links">2. <a href="helpout.html">Download &amp; Fight!</a>
         <p class="text-center main-links">3. <a href="store.html">Buy &amp; Distribute Cards!</a>
