--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="col-xs-12 col-md-6">
        
         <div class="text-center">
-          <h4>URGENT! WE NEED TO CALL, EMAIL, and WRITE!</h4>
+          <h4>URGENT! WE NEED YOU TO TAKE ACTION!</h4>
           <h4>Days Left For YOU To <a href="helpout.html">Help Save The Bridge!</a></h4>
             <div id="clockdiv">
               <div>
