--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Global site tag (gtag.js) - Google Ads: 782326423 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-782326423"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-782326423');
+    </script>
+
+    <!-- Event snippet for Web Visits conversion page -->
+    <script>
+      gtag('event', 'conversion', {'send_to': 'AW-782326423/rgtxCLrzrJIBEJe1hfUC'});
+    </script>
+
   <!-- Latest compiled and minified Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -49,8 +64,20 @@
       <div class="col-xs-12 col-md-6">
        
         <div class="text-center">
-          <h4>URGENT! WE NEED YOU TO TAKE ACTION!</h4>
-          <h4>Days Left For YOU To <a href="helpout.html">Help Save The Bridge!</a></h4>
+          <h4>THE FIGHTS IS NOT OVER!</h4>
+
+          <p>The Tappan Zee Bridge may now be called by some The Cuomo Bridge.  But we have other names for it:</p>
+          <ul>
+            <li style="text-align: left">The Bridge of Cuo-rruption</li>
+            <li style="text-align: left">The Nepotism Bridge</li>
+            <li style="text-align: left">The Abuse of Power Bridge</li>
+            <li style="text-align: left">THE TAPPAN ZEE BRIDGE!</li>
+          </ul>
+
+          <p style="text-align: left">We have over 113,000 signatures, and growing!  Please help us continue to remind people worldwide of the true name of the bridge; help us keep our corrupt, cowardly, and craven legislators and senators on notice that they work for US; and help us win back <em>this</em> bridge, the Triboro Bridge, the Holland Tunnel, the Queensboro Bridge, <strong>and every other stolen landmark</strong>.</p>
+          <p>However long it takes, we will not give up the fight.</p>
+
+<!--           <h4>Days Left For YOU To <a href="helpout.html">Help Save The Bridge!</a></h4>
             <div id="clockdiv">
               <div>
                 <span class="days" id="day"></span>
@@ -70,7 +97,7 @@
               </div>
             </div>
              
-            <p id="demo"></p>
+            <p id="demo"></p> -->
  
         </div>
       </div>
@@ -146,7 +173,7 @@
 
 <script>
  
-var deadline = new Date("nov 6, 2018 08:00:00").getTime();
+var deadline = new Date("nov 6, 2022 08:00:00").getTime();
  
 var x = setInterval(function() {
  
