--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="text-center">
           <h4>THE FIGHTS IS NOT OVER!</h4>
 
-          <p>The Tappan Zee Bridge may now be called by some The Cuomo Bridge.  But we have other names for it:</p>
+          <p>The Tappan Zee Bridge may now be called by some<br>The Cuomo Bridge.  But we have other more fitting names for it:</p>
           <ul>
             <li style="text-align: left">The Bridge of Cuo-rruption</li>
             <li style="text-align: left">The Nepotism Bridge</li>
