Fully updated the website

--- a/navigation.html
+++ b/navigation.html
@@ -31,9 +31,9 @@
           <li><a href="helpout.html">Help Out</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="media.html">Media</a></li>
-          <li><a href="100reasons.html">100 Rs</a></li>
-          <li><a href="100alternatives.html">100 As</a></li>
-          <li><a href="store.html">Buy TZ Stuff</a></li>
+<!--           <li><a href="100reasons.html">100 Rs</a></li>
+          <li><a href="100alternatives.html">100 As</a></li> -->
+          <!-- <li><a href="store.html">Buy TZ Stuff</a></li> -->
           <li><a href="team.html">Management</a></li>
           <li style="font-weight: bold"><a href="donate.html">Donate!</a></li>
           </ul>
