--- a/helpout.html
+++ b/helpout.html
@@ -53,9 +53,9 @@
       <h2>Join the Fight!</h2>
   <div class="well">     
 
-    <h4>6/1/18 - Please <a href="http://events.eventzilla.net/e/help-us-deliver-the-petition-to-governor-cuomo-2138958392" target="_blank">sign up</a> to help us deliver the 5,000 pages of petition signatures to Governor Cuomo on Thursday, June 7th, at 12 noon.</h4>  
-
-    <h4>We need everyone and anyone to write to as many state senators and representatives as possible, starting with your local ones!  First, use the tools below to find your representatives).  Second, help get more people to our website so they too can help by downloading flyers, buying action cards, and more!</h4>
+   <!--  <h4>6/1/18 - Please <a href="http://events.eventzilla.net/e/help-us-deliver-the-petition-to-governor-cuomo-2138958392" target="_blank">sign up</a> to help us deliver the 5,000 pages of petition signatures to Governor Cuomo on Thursday, June 7th, at 12 noon.</h4>  
+ -->
+    <h4>We need everyone and anyone to write to as many state senators and representatives as possible, starting with your local ones!  First, use the tools below to find your representatives).  Second, help get more people to our website so they too can help by downloading flyers, buying action cards, and more!  Most importantly, we need more people to sign our petition!</h4>
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <a href="images/SOTZ-flyer.pdf" download="SOTZ-flyer.pdf">
@@ -74,24 +74,24 @@
         <a href="images/SOTZ-letter2.pdf" download="SOTZ-letter2.pdf">Download the SOTZ Letter</a>     
       </div>
     </div> 
-    <div class="row">
+<!--     <div class="row">
       <div class="col-xs-12 col-md-6">
         <a href="http://events.eventzilla.net/e/save-our-tappan-zee--live-protest-event-2138933813?resp=on&dateid=2138805633">
           <h2>Come protest with us!</h2>
         </a>
         (FREE)
         <p>Want to help?  Sign up for an upcoming protest event to help us hold up signs and our 35 foot full color banner!  And if you'd like to organize a protest in YOUR town or area, let us know and we'll do all we can to support you with signs, banners, etc.</p>
-        <a href="http://events.eventzilla.net/e/save-our-tappan-zee--live-protest-event-2138933813?resp=on&dateid=2138805633">Sign Up To Protest!</a>
+        <p>NO CURRENT EVENTS</p>
       </div>
       <div class="col-xs-12 col-md-6">
         <a href="/store.html">
           <h2>SOTZ Action Cards To Hand Out</h2>
         </a>
         <p>Want to help?  Purchase our full-color double-sided business card size 'action cards' to really make an impact with those you meet at parties, the office, and the supermarket!  It tells everyone you hand them out to EXACTLY what they need to do to contribute in some way to our cause.  They conveniently fit in your wallet as well as you car cup holders.  Suggestion: Hand them out in packs of 10 and ask others to distribute to THEIR people!</p>
-        <a href="/store.html">Purchase Business-Size Action Cards!</a>     
+        <p>WE HAVE SOLD OUT!</p>    
       </div>
-    </div>
-    <div class="row">
+    </div> -->
+    <!-- <div class="row">
       <div class="col-xs-12 col-md-6">
         <a href="/store.html">
           <h2>Get Your Own SOTZ Box</h2>
@@ -106,7 +106,7 @@
         <p>Want to help?  Purchase any of our merchandise separately!  Just want a sign?  You got it.  Just want pens?  You got it.  Just want magnets?  You got it.</p>
          <a href="/store.html">Buy Promotional Merchandise!</a>    
       </div>
-    </div> 
+    </div>  -->
 
     <h2>Want to send off emails to your elected reps?  Copy and paste this letter:</h2>
     <p>From the desk of (full name, address, zip code, email, and phone number)</p>
@@ -115,7 +115,7 @@
   
     <p>I am writing to you in support of NY State Senate Bill S7671 & NY State Assembly Bill A8914, both of which would rename the current Governor Mario M. Cuomo Bridge to the far more appropriate Governor Mario M. Cuomo Tappan Zee Bridge, and save us countless tax dollars by avoiding the replacement of all the signs.</p>
 
-    <p>I am one of the over 108,000 people who signed the petition on Change.org and I believe that the Tappan Zee name needs to remain a part of the new bridge, and if you don’t support this beautiful compromise, then YOU are the one being partisan.  Here are some more reasons why you should support it:</p>
+    <p>I am one of the over 115,000 people who signed the petition on Change.org and I believe that the Tappan Zee name needs to remain a part of the new bridge, and if you don’t support this beautiful compromise, then YOU are the one being partisan.  Here are some more reasons why you should support it:</p>
 
     <p>1.  History matters.  The bridge was originally named for the founders of New York: the Tappan Indians of the Lenape Nation and the Dutch settlers (Zee means ‘sea’ in Dutch).  Did you know that the official seal of New York City depicts a Dutch trader and a Lenape Indian? The history of that bridge name is so important.</p>
 
@@ -137,7 +137,6 @@
     <h2>Looking for where to send these letters?</h2>
     <p>Here are all of NY's elected representatives <a href="http://nyassembly.gov/mem/" target="_blank">names, addresses, phones, and emails.</a></p>
     <p>1. CALL THEM.  2. EMAIL THEM.  3. WRITE TO THEM!</p>
-    <p>Do NOT delay.  We do NOT have much time left!</p>
  
   </div>
 
