--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <br><br><br><br>
 
 <!--TSZHPS WEBSITE CONTENT BELOW THIS LINE-->
-<h2 class="text-center">Won't you help us... <span><u>Save Our Tappan Zee, Inc.</u></span>?</h2>
+<h2 class="text-center">Won't you help us... <span><u>Save Our Tappan Zee?</u></span>?</h2>
   <div class="well">
 
 
@@ -64,17 +64,9 @@
       <div class="col-xs-12 col-md-6">
        
         <div class="text-center">
-          <h4>THE FIGHTS IS NOT OVER!</h4>
+          <h4>Our not-for-profit apolitical mission is to return the Tappan Zee Bridge its original name, and to preserve the history of the Tappan Indians (Tappan) and Dutch Settlers (Zee is Dutch for 'sea') who inspired the name.  The original name of the span crossing the Hudson River between Westchester and Rockland counties <em>must</em> return.</h4>
 
-          <p>The Tappan Zee Bridge may now be called by some<br>The Cuomo Bridge.  But we have other more fitting names for it:</p>
-          <ul>
-            <li style="text-align: left">The Bridge of Cuo-rruption</li>
-            <li style="text-align: left">The Nepotism Bridge</li>
-            <li style="text-align: left">The Abuse of Power Bridge</li>
-            <li style="text-align: left">THE TAPPAN ZEE BRIDGE!</li>
-          </ul>
-
-          <p style="text-align: left">We have over 113,000 signatures, and growing!  Please help us continue to remind people worldwide of the true name of the bridge; help us keep our corrupt, cowardly, and craven legislators and senators on notice that they work for US; and help us win back <em>this</em> bridge, the Triboro Bridge, the Holland Tunnel, the Queensboro Bridge, <strong>and every other stolen landmark</strong>.</p>
+          <p style="text-align: left">We have over 115,000 signatures, and growing!  Please help us continue to remind people worldwide of the true name of the bridge; help us keep our corrupt, cowardly, and craven legislators and senators on notice that they work for US; and help us win back <em>this</em> bridge, the Triboro Bridge, the Holland Tunnel, the Queensboro Bridge, <strong>and every other stolen landmark</strong>.</p>
           <p>However long it takes, we will not give up the fight.</p>
 
 <!--           <h4>Days Left For YOU To <a href="helpout.html">Help Save The Bridge!</a></h4>
@@ -124,7 +116,7 @@
       <div class="col-md-6 col-xs-12 text-center">
         <img class="text-center img-responsive" src="images/sotz-logo-website.png" alt="Photo of SOTZ logo">
         <h4 class="text-center">SIGNATURE COUNT:
-          <p style="color: red">113,000 Supporters since 11/3/17<br>
+          <p style="color: red">115,000 Supporters since 11/3/17<br>
             <span style="color: black">who want their bridge back</span>
           </p>
         </h4>
@@ -133,8 +125,8 @@
         <h3 class="text-center">Please Sign Our Petition:</h3>
         <p class="text-center main-links">1. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch" target="_blank">Sign the petition!</a></p>
         <p class="text-center main-links">2. <a href="helpout.html">Download &amp; Fight!</a>
-        <p class="text-center main-links">3. <a href="store.html">Buy &amp; Distribute Cards!</a>
-        <p class="text-center main-links">4. <a href="http://events.eventzilla.net/e/help-us-deliver-the-petition-to-governor-cuomo-2138958392" target="_blank">Join a Protest!</a>        
+        <!-- <p class="text-center main-links">3. <a href="store.html">Buy &amp; Distribute Cards!</a> -->
+        <!-- <p class="text-center main-links">4. <a href="http://events.eventzilla.net/e/help-us-deliver-the-petition-to-governor-cuomo-2138958392" target="_blank">Join a Protest!</a> -->        
         <p class="text-center main-links">5. <a href="donate.html">Donate!</a>
         <p class="text-center main-links">6. <a href="http://eepurl.com/diOTQ5" target="_blank">Join our email list. Stay informed.</a></p>
         <p class="text-center main-links">7. <a href="https://twitter.com/SaveOurTappanZ" target="_blank">Follow us on Twitter!</a></p>
@@ -143,7 +135,7 @@
     </div>
     <br>
     <div>
-     <p>What started as a single signature by a citizen watching tv has turned into a petition with over 111,000 signatures, news coverage around the country, and the creation of this apolitical not-for-profit advocacy organization with one primary mission: to return the Tappan Zee name to our bridge crossing the Hudson between Westchester &amp; Rockland counties, NY. <a href="about.html">Learn more about us.</a></p>
+     <p>What started as a single signature by a citizen watching tv has turned into a petition with over 115,000 signatures, news coverage around the country, and the creation of this apolitical not-for-profit advocacy organization with one primary mission: to return the Tappan Zee name to our bridge crossing the Hudson between Westchester &amp; Rockland counties, NY. <a href="about.html">Learn more about us.</a></p>
      <p>Save Our Tappan Zee, Inc. is a NY 501(c)(3) not-for-profit corporation.</p>
     </div>
   </div>
