--- a/team.html
+++ b/team.html
@@ -52,45 +52,20 @@
 
       <div id="management" class="well">
 
-        <h4><strong>James Dorato, M.B.A. - President & Treasurer</strong></h4>
+        <h4><strong>Dr. Monroe Mann, PhD, Esq, MBA, ME, LLM - Executive Director & President</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
-            <img src="images/jimmy.jpg" class="img-responsive" alt="photo of James Dorato" style="max-height: 200px; max-width: 200px; text-align: center">
-          </div>
-
-          <div class="col-xs-12 col-md-9">
-            <p>Jimmy grew up in the Albany area, but his adventures in undergrad and business school took him to NYC on a regular basis, and each time, he'd drive over the Tappan Zee Bridge. Jimmy is passionate about business, and is currently working in that field, but he is now also passionate about preserving history for future generations.  He believes that it is imperative that we know about the people that came before us, recognizing the shoulders on whom we now stand, and learning about the world in which we grew up through the living history that still stands before us.  In his free time, Jimmy enjoys traveling, scuba diving, and golfing... and snowboarding when it gets too cold to be out on the course!
-            </p>
-          </div>
-        </div>
-
-        <h4><strong>Marlene Pedersen - Vice President</strong></h4>
-        <div class="row">
-          <h4></h4>
-          <div class="col-xs-12 col-md-3">
-            <img src="images/default.jpg" class="img-responsive" alt="photo of Marelene Pedersen" style="max-height: 200px; max-width: 200px; text-align: center">
-          </div>
-
-          <div class="col-xs-12 col-md-9">
-            <p>Full bio & Photo coming soon.</p>
-          </div>
-        </div>
-
-       <!--  <h4><strong>Cherish Pratt, M.A. - Vice President</strong></h4>
-        <div class="row">
-          <h4></h4>
-          <div class="col-xs-12 col-md-3">
-            <img src="images/cherish.jpg" class="img-responsive" alt="photo of Cherish Pratt" style="max-height: 200px; max-width: 200px; text-align: center">
+            <img src="images/monroe.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
           </div>
 
           <div class="col-xs-12 col-md-9">
             <p>
-              Cherish was raised in Rockland County, NY, where her formerly German, French and Scottish immigrant ancestors settled several generations ago.  Her great-grandfather, former Superintendant of Schools, drove across the Hudson River in his early model Ford when the river froze and there was no Tappan Zee built.  Dr. Hopf made it safely across and since then, the Hudson River and the Tappan Zee Bridge that spans it, existed as part of the family lore.  Educated in Germany, Japan and Honolulu, Cherish returned to Rockland from Hawaii to raise a family.  She is grateful for her worldly education and feels fortunate to speak three languages and to have lived, studied and worked on several continents.  Cherish has lived in several cities in Japan, having studied then worked as an English language teacher for Princeton University. She became a scholar of Japanese religion at the University of Hawaii, Manoa, and was granted an audience with the Emperor Akihito and Empress Michiko of Japan, to present her work on Japanese weddings.  Back in the United States, her expertise in educational administration and marketing is notable, having worked for some of the top advisory and research organizations, private schools and law schools in the region.  She is a published writer, speechwriter and is currently working on a screenplay and a book.  Cherish is the proud mother of two children who attend Rockland county schools.</p>
+              Monroe, born in Port Chester and a graduate of King Street Elementary School, went to middle school and high school in Maine, and then college in the south and DC, graduating from Franklin College in Lugano, Switzerland, where he learned how to speak French and Italian.  From there, in a condensed version, he became a professional actor, wrote or co-wrote 8 books (one of which was a BN.com #1 bestseller), was nominated for a bronze star for combat service in Iraq (resigning as a Captain, Intelligence), became a lawyer, worked as a public defender in Westchester, and then taught English in Shanghai, China for a year, where he also learned how to 对啊，我会说汉语啊 quite well！ He also co-wrote, produced, co-directed, and co-starred in the horror-comedy feature film, "You Can't Kill Stephen King" that got sold at Cannes in France to over 15 international territories (including the USA), volunteered in Haiti as an EMT after the earthquake, spoke at organizations and schools around the world in more than five countries, and became an Ostrich riding champion in South Africa.  Monroe recently earned his PhD in psychology from Capella University and is now the executive director of Break Diving, Inc., a not-for-profit with one mission: helping individuals find success in life.  He continues to practice law as a sole practioner, focusing on entertainment contracts for actors, producers, musicians, models, and other entertainers, and recently studied hard to become a Ruby on Rails web developer and coder (he coded this site).  His latest mission?  Returning the historic Tappan Zee name to the bridge that rightly deserves it.  Monroe's adventures around the world have taught him that a people's history is one of the most important parts of its culture and identity.  He believes wholeheartedly that no name more deserves to be on our new Tappan Zee than... Tappan Zee!
+            </p>
           </div>
-        </div> -->
 
-        <h4><strong>Christopher McCormick, B.F.A. - Secretary</strong></h4>
+        <h4><strong>Christopher McCormick, Vice-President & Secretary</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
@@ -103,33 +78,19 @@
             </p>
           </div>
         </div>
-        
-        <h4><strong>Clifton Cloud - Board Member</strong></h4>
+
+        </div><h4><strong>James Dorato, M.B.A. - Treasurer</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
-            <img src="images/clifton.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
+            <img src="images/jimmy.jpg" class="img-responsive" alt="photo of James Dorato" style="max-height: 200px; max-width: 200px; text-align: center">
           </div>
 
           <div class="col-xs-12 col-md-9">
-            <p>Clifton Cloud is a resident of Sleepy Hollow and is the Executive Director Of Star Group Productions at Cipriani USA and runs all of the Production for 3 unique and Beautiful landmark buildings.  Clifton has served on the board at the Old Dutch Church, Philipse Manor Beach Club and has been an active contributor to the Winter Blues Music Fundraiser to be held this year Jan 6th at the Tarrytown Music Hall.</p>
-          </div>
-        </div>
-
-        <h4><strong>Dr. Monroe Mann, PhD, Esq, MBA, ME, LLM - Executive Director & Board Member</strong></h4>
-        <div class="row">
-          <h4></h4>
-          <div class="col-xs-12 col-md-3">
-            <img src="images/monroe.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
-          </div>
-
-          <div class="col-xs-12 col-md-9">
-            <p>
-              Monroe, born in Port Chester and a graduate of King Street Elementary School, went to middle school and high school in Maine, and then college in the south and DC, graduating from Franklin College in Lugano, Switzerland, where he learned how to speak French and Italian.  From there, in a condensed version, he became a professional actor, wrote or co-wrote 8 books (one of which was a BN.com #1 bestseller), was nominated for a bronze star for combat service in Iraq (resigning as a Captain, Intelligence), became a lawyer, worked as a public defender in Westchester, and then taught English in Shanghai, China for a year, where he also learned how to 对啊，我会说汉语啊 quite well！ He also co-wrote, produced, co-directed, and co-starred in the horror-comedy feature film, "You Can't Kill Stephen King" that got sold at Cannes in France to over 15 international territories (including the USA), volunteered in Haiti as an EMT after the earthquake, spoke at organizations and schools around the world in more than five countries, and became an Ostrich riding champion in South Africa.  Monroe recently earned his PhD in psychology from Capella University and is now the executive director of Break Diving, Inc., a not-for-profit with one mission: helping individuals find success in life.  He continues to practice law as a sole practioner, focusing on entertainment contracts for actors, producers, musicians, models, and other entertainers, and recently studied hard to become a Ruby on Rails web developer and coder (he coded this site).  His latest mission?  Returning the historic Tappan Zee name to the bridge that rightly deserves it.  Monroe's adventures around the world have taught him that a people's history is one of the most important parts of its culture and identity.  He believes wholeheartedly that no name more deserves to be on our new Tappan Zee than... Tappan Zee!
+            <p>Jimmy grew up in the Albany area, but his adventures in undergrad and business school took him to NYC on a regular basis, and each time, he'd drive over the Tappan Zee Bridge. Jimmy is passionate about business, and is currently working in that field, but he is now also passionate about preserving history for future generations.  He believes that it is imperative that we know about the people that came before us, recognizing the shoulders on whom we now stand, and learning about the world in which we grew up through the living history that still stands before us.  In his free time, Jimmy enjoys traveling, scuba diving, and golfing... and snowboarding when it gets too cold to be out on the course!
             </p>
           </div>
         </div>
-
       </div>
     </div>
 
